配置内存, 不然总是系统卡死